plagiarism-service/k8s/k8s-plagiarism-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plagiarism-service
    type: microservice
    tier: backend
  name: plagiarism-service
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: plagiarism-service
  type: NodePort
