plagiarism-service/k8s/k8s-plagiarism-service-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plagiarism-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /api/plagiarisms(/|$)(.*)
            backend:
              serviceName: plagiarism-service
              servicePort: 8080
